# aws-ofi-nccl

./: RELEASENOTES.md  configure.ac  test_instrument_functions.sh  vnic_implementation.md
.github/workflows/: cherry-pick-release.yml  final-release-commit.yml  generate-release-draft.yml  release-preflight.yml  release.yml
include/: Makefile.am  nccl_ofi.h  nccl_ofi_api.h  nccl_ofi_gin_base.h  nccl_ofi_param.h  nccl_ofi_platform.h  nccl_ofi_rdma.h  nccl_ofi_sendrecv.h  nccl_ofi_topo.h  platform-aws.h
include/gin/: nccl_ofi_gin.h  nccl_ofi_gin_reqs.h  nccl_ofi_gin_resources.h  nccl_ofi_gin_types.h
include/rdma/gin/: nccl_ofi_gin.h  nccl_ofi_gin_api.h  nccl_ofi_gin_reqs.h  nccl_ofi_gin_resources.h  nccl_ofi_gin_types.h
include/rdma_gin/: nccl_ofi_rdma_gin.h  nccl_ofi_rdma_gin_allgather.h  nccl_ofi_rdma_gin_reqs.h  nccl_ofi_rdma_gin_resources.h  nccl_ofi_rdma_gin_types.h
m4/: check_enable_instrument_functions.m4
src/: Makefile.am  nccl_ofi_api.cpp  nccl_ofi_cuda.cpp  nccl_ofi_instrument.cpp  nccl_ofi_interface_nvidia.cpp  nccl_ofi_net.cpp  nccl_ofi_platform.cpp  nccl_ofi_rdma.cpp  nccl_ofi_sendrecv.cpp  nccl_ofi_topo.cpp  nccl_ofi_vnic.cpp  platform-aws.cpp
src/gin/: nccl_ofi_gin.cpp  nccl_ofi_gin_api.cpp  nccl_ofi_gin_reqs.cpp  nccl_ofi_gin_resources.cpp
src/rdma/gin/: nccl_ofi_gin.cpp  nccl_ofi_gin_api.cpp  nccl_ofi_gin_gdaki.cpp  nccl_ofi_gin_reqs.cpp  nccl_ofi_gin_resources.cpp
src/rdma_gin/: nccl_ofi_rdma_gin.cpp  nccl_ofi_rdma_gin_allgather.cpp  nccl_ofi_rdma_gin_api.cpp  nccl_ofi_rdma_gin_reqs.cpp  nccl_ofi_rdma_gin_resources.cpp
tests/functional/: .gitignore  Makefile.am  comm_abort_scenarios.cpp  gin.cpp  inflight_close.cpp  multi_comm_domain.cpp  nccl_connection.cpp  nccl_message_transfer.cpp  resource_cleanup.cpp  reuse_listen_comm.cpp  stress_scale.cpp  test-common.h
tests/unit/: Makefile.am  aws_platform_mapper.cpp  instrument_functions.cpp  platform_manager.cpp  vnic.cpp
tests/utils/: buffer_utils.h  data_transfer.h  device_utils.h  env_parser.h  resource_tracker.h  test_fixture.cpp  test_fixture.h  test_params.cpp  test_params.h  thread_context.h  thread_utils.h
